Code climate fixes